# endee

./: .gitignore  CMakeLists.txt  Dockerfile  README - Copy.md  package-lock.json
pdf_search/: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  adaptive_rag_agent.py  api.py  benchmark_ingestion.py  check_history.py  cli.py  config.py  debug_chat.py  debug_flow.py  debug_index_info.py  debug_insert_400.py  debug_search_response.py  debug_search_script.py  embedder.py  endee_client.py  ingestion_status.py  local_e2e_test.py  local_test_qdrant.py  local_vector_db.py  memory_manager.py  package-lock.json  pdf_processor.py  rag_agent.py  reproduce_issue.py  requirements.txt  reset_index.py  search_engine.py  summarizer.py  test_api.py  test_api_upload.py  test_llm.py  test_out.txt  test_real_connection.py  test_upload_and_poll.py  verify_full_chain.py  (+4 more)
pdf_search/backend/: main.py  start.bat  user_memory.json
pdf_search/frontend/: build_log.txt  index.html  package-lock.json  package.json  vercel.json
pdf_search/frontend/src/: App.css  App.jsx
pdf_search/frontend/src/components/: AdaptiveRAGInterface.jsx  ChatInterface.jsx  HistoryDetailModal.jsx  HistorySidebar.jsx  SearchInterface.jsx  SummarizeInterface.jsx  ThemeToggle.jsx  UploadInterface.jsx
src/: main.cpp
src/core/: ndd.hpp  types.hpp
src/hnsw/: hnswalg.h
src/sparse/: bmw.hpp
src/utils/: settings.hpp
test_benchmark_data/index/: chunk_store.json  document_index.json
tests/: CMakeLists.txt
